src/scss/_settings.scss
/**
 * This file is part of the Centagon Primer package.
 *
 * (c) Centagon <contact@centagon.com>
 *
 * For the full copyright and license information, please view the LICENSE
 * file that was distributed with this source code.
 */

/// Susy settings
/// @type Map
$susy: (
    columns: 12,
    gutter-position: inside-static,
    gutters: 30px / 80px,
    column-width: 70px
);

/// Will a grid be generated on compile?
/// @type Boolean
$grid-generate: true !default;

/// When turned on, this setting adds negative margins to nested rows
/// @type Boolean
$grid-automatic-nesting: true !default;

/// Does the main container have a limit?
/// @type Number
$grid-container-limit: 1500px !default;

/// The default font-family
/// @type String
$font-family-sans-serif: Helvetica, Arial, sans-serif !default;

/// Default color settings
/// @type Map
$colors: (
    'black': rgb(20, 20, 20),
    'white': rgb(255, 255, 255)

    // ...
) !default;

/// Should images be lazily loaded?
/// @type Bool
$lazyload-images: true !default;

/// The global transition time limit.
/// @type Number
$transition-time: 0.15s;

